[tool.poetry]
name = "args"
version = "0.1.0"
description = "Yet another command line argument parser"
authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
pytype = "^2019.11"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
